Better context retrieval and system prompt